# TaskLoom

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/backend/: DatabaseClient.cpp  DatabaseClient.h
src/cli/: TaskLoomInterface.cpp  TaskLoomInterface.h
